# comrade-major

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: async-nonblocking.mdc  dependency-injection.mdc  layer-boundaries.mdc  voice-agent-architecture.mdc
config/: settings.py  types.py
scripts/: setup-environment.sh
src/: main.py
src/application/: __init__.py  coordinator.py  interfaces.py  runtime.py
src/application/loops/: __init__.py  audio_ingest.py  inner_voice.py  primary.py
src/domain/: __init__.py  chat.py  conversation.py  messages.py
src/infrastructure/: __init__.py  audio_io.py  detector.py
src/infrastructure/llm/: __init__.py  factory.py  messages.py  types.py
src/infrastructure/llm/local/: __init__.py  transformers.py
src/infrastructure/llm/providers/: __init__.py  openai_compatible.py
src/infrastructure/logging/: __init__.py  message_log.py
src/infrastructure/mind/: __init__.py  factory.py  tools.py
src/infrastructure/mind/local/: __init__.py  transformers.py
src/infrastructure/mind/providers/: __init__.py  openai_compatible.py
src/infrastructure/stt/: __init__.py  whisper.py
src/infrastructure/tts/: __init__.py  kokoro.py
tests/: test_audio_ingest.py  test_conversation_store.py  test_domain_messages.py  test_loops.py  test_message_log.py  test_settings.py
