[project]
name = "voice-agent"
version = "0.1.0"
description = "Asynchronous Voice AI Agent with Barge-in support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "soundfile>=0.12.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "httpx>=0.27.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["config", "src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "src"]
